--- a/src/contacts/Contacts.module.css
+++ b/src/contacts/Contacts.module.css
@@ -1,20 +1,48 @@
-.worksBlock {
+.contactsBlock {
     height: 100vh;
-    background-color: #dbc899;
+    background-color: #d4a2af;
 }
-.worksContainer {
+
+.contactsContainer {
     flex-direction: column;
     justify-content: flex-start;
 
 }
+
 .title {
-background-color: #a75d5d;
-}
-.works {
-    border: 1px solid;
+    background-color: #a75d5d;
+    margin-bottom: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    position: relative;
     width: 100%;
+
+}
+
+.contacts {
+    border: 1px solid;
+    width: 280px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    height: 200px;
+}
+
+.button {
+    background: -webkit-gradient(linear, 0 0, 0 100%, from(#00BBD6), to(#EBFFFF));
+    padding: 10px 20px;
+}
+
+.form {
+    background-color: #c5d3ec;
+    height: 80px;
+    /*display: flex;*/
+    /*justify-content: flex-end;*/
+    /*align-items: center;*/
 }
 
