--- a/src/projects/Projects.module.css
+++ b/src/projects/Projects.module.css
@@ -3,6 +3,7 @@
     background-color: #1f1f20;
     padding: 100px 0;
 }
+
 .projects {
     border: 1px solid;
     width: 100%;
@@ -10,7 +11,11 @@
     justify-content: space-between;
     flex-wrap: wrap;
     margin-top: 30px;
+    align-items: flex-start;
+
 }
+
+
 
 .projectsContainer {
     flex-direction: column;
@@ -18,20 +23,21 @@
     flex-wrap: nowrap;
 
 }
-.title h2{
+
+.title h2 {
     margin: 0 0 30px;
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 400;
     color: #fff;
     text-transform: capitalize;
     font-size: 36px;
-    line-height:1.2;
+    line-height: 1.2;
     letter-spacing: 5px;
     position: relative;
 }
 
 .title {
-   margin: 0;
+    margin: 0;
     position: relative;
 }
 
@@ -41,9 +47,9 @@
     background: #4e93e6;
     width: 55px;
     height: 1px;
-    bottom:-10px;
-    left:50%;
-    transform: translate(-50%,50%);
+    bottom: -30px;
+    left: 50%;
+    transform: translate(-50%, 50%);
 }
 
 
