--- a/src/projects/project/Project.module.css
+++ b/src/projects/project/Project.module.css
@@ -1,41 +1,64 @@
 .project {
-    width: 250px;
-    background-color:    #545454;;
+    width: 450px;
+    background-color: #252527;;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
-
 }
 
-.icon {
-    height: 240px;
-    width: 240px;
-    /*background-color: #7b6c6c;*/
-    /*padding: 10px 20px;*/
+.imageContainer {
+    height: 300px;
+    width: 100%;
+    background-color: #d6d6d6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
+.imageContainer ::before {
+    position: absolute;
+    content: '';
+    background-color: black;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0.5;
+}
+
+.projectButton {
+    color: white;
+    text-decoration: none;
+    background-color: #252527;
+    font-size: large;
+    width: 150px;
+    height: 50px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    /*position: relative;*/
+    z-index: 1;
+}
+
+.projectTitle {
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 16px;
+    letter-spacing: 1px;
+    margin: 0 0 5px;
+    line-height: 1.2;
+    color: #fff;
 }
 
 .description {
-    background-color: #a2d294;
+    font-family: 'Poppins', sans-serif;
+    line-height: 1.8;
+    font-size: 12px;
+    color: #fff;
+    font-weight: 400;
 }
-.title {
-    background-color: #a2d294;
-}
-.img {
-    /*height: 240px;*/
-    /*width: 240px;*/
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.imageContainer {
-    height: 200px;
-    width: 100%;
-    /*background-image: url('https://wallpaperaccess.com/full/2005056.png');*/
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 
+.projectInfo {
+    background: #252527;
 }
