--- a/src/skills/skill/Skill.module.css
+++ b/src/skills/skill/Skill.module.css
@@ -1,6 +1,6 @@
 .skill {
-    width: 250px;
-    background-color: darkgray;
+    width: 240px;
+    background-color: gray;
     display: flex;
     flex-direction: column;
     align-items: center;
