--- a/src/connection/Connection.module.scss
+++ b/src/connection/Connection.module.scss
@@ -2,8 +2,9 @@
 @import "../my-app/src/common/styles/sass/mixins";
 
 .connectionBlock {
-  height: 100vh;
+  height: 40vh;
   background-color: $bgSecondColor;
+  padding-top: 40px;
 
 
   .worksContainer {
@@ -13,14 +14,40 @@
     .title {
       background-color: $bgSecondColor;
       color: $textColor;
-      @include text($titleFontFamily,20px,1.2)
+      @include text($titleFontFamily,20px,1.2);
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: nowrap;
+      position: relative;
+      width: 100%;
+      margin-bottom: 40px;
     }
 
     .button {
-      background: -webkit-gradient(linear, 0 0, 0 100%, from(#00BBD6), to(#EBFFFF));
-      visibility: visible;
-      animation-delay: 0.3s;
-      animation-name: fadeInUp;
+      //background: -webkit-gradient(linear, 0 0, 0 100%, from(#00BBD6), to(#EBFFFF));
+      //visibility: visible;
+      //animation-delay: 0.3s;
+      //animation-name: fadeInUp;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: nowrap;
+      width: 160px;
+      height: 50px;
+      background-color: transparent;
+      overflow: hidden;
+      border: 3px solid $primaryColor;
+      border-radius: 5px;
+      margin-bottom: 20px;
+      transition: .5s;
+      font-family: $textFontFamily;
+      font-size: 20px;
+      font-weight: 400;
+      color: #fff;
+      text-decoration: none;
     }
 
 
