--- a/src/footer/Footer.module.scss
+++ b/src/footer/Footer.module.scss
@@ -2,7 +2,7 @@
 @import "../my-app/src/common/styles/sass/mixins";
 
 .footerBlock {
-  height: 100vh;
+  height: 40vh;
   background-color: $bgSecondColor;
 
   .footerContainer {
@@ -12,6 +12,7 @@
     .title {
       background-color: $bgSecondColor;
       color: $textColor;
+      @include text($titleFontFamily,20px,1.2);
     }
 
     .footer {
@@ -21,6 +22,7 @@
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
+      @include text($textFontFamily,14px,1.2);
     }
 
     .button {
