--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -30,7 +30,7 @@
     height: 400px;
     background-color: $bgColor;
     background-size: cover;
-    border:  1px solid $primaryColor;
+    //border:  1px solid $primaryColor;
     border-radius: 25px;
   }
 }
