--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -4,7 +4,12 @@
 .header {
     background-color: $bgSecondColor;
     height: 80px;
+    width: 100%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    position: fixed;
+    left: 0;
+    z-index: 9999;
+
 }
