--- a/src/connection/Connection.module.scss
+++ b/src/connection/Connection.module.scss
@@ -3,54 +3,57 @@
 
 .connectionBlock {
   height: 40vh;
-  background-color: $bgSecondColor;
+  background-color: $bgColor;
   padding-top: 40px;
-
-
   .worksContainer {
     flex-direction: column;
     justify-content: flex-start;
+.connection {
+  width: 100%;
+  border-radius: 7px
+;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  background-color: $bgSecondColor;
+  .title {
+    background-color: $bgSecondColor;
+    color: $textColor;
+    @include text($titleFontFamily, 20px, 1.2);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    position: relative;
+    width: 100%;
+    margin-bottom: 40px;
+  }
 
-    .title {
-      background-color: $bgSecondColor;
-      color: $textColor;
-      @include text($titleFontFamily,20px,1.2);
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: nowrap;
-      position: relative;
-      width: 100%;
-      margin-bottom: 40px;
-    }
+  .button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    width: 160px;
+    height: 50px;
+    background-color: transparent;
+    overflow: hidden;
+    border: 3px solid $primaryColor;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    transition: .5s;
+    font-family: $textFontFamily;
+    font-size: 20px;
+    font-weight: 400;
+    color: #fff;
+    text-decoration: none;
+  }
 
-    .button {
-      //background: -webkit-gradient(linear, 0 0, 0 100%, from(#00BBD6), to(#EBFFFF));
-      //visibility: visible;
-      //animation-delay: 0.3s;
-      //animation-name: fadeInUp;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: nowrap;
-      width: 160px;
-      height: 50px;
-      background-color: transparent;
-      overflow: hidden;
-      border: 3px solid $primaryColor;
-      border-radius: 5px;
-      margin-bottom: 20px;
-      transition: .5s;
-      font-family: $textFontFamily;
-      font-size: 20px;
-      font-weight: 400;
-      color: #fff;
-      text-decoration: none;
-    }
-
-
+}
   }
 }
 
