--- a/src/contacts/Contacts.module.scss
+++ b/src/contacts/Contacts.module.scss
@@ -2,69 +2,83 @@
 @import "../my-app/src/common/styles/sass/mixins";
 
 .contactsBlock {
-    height: 60vh;
-    background-color: $bgColor;
-    display: block;
-    margin-top: 0em;
+    height: 100vh;
+    background-color: #1f1f20;
+}
 
-    .contactsContainer {
-        flex-direction: column;
-        justify-content: flex-start;
-        .title {
-            background-color: $bgColor;
-            margin-bottom: 40px;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: nowrap;
-            position: relative;
-            width: 100%;
-            color: $textColor;
-        }
-    }
-    .contacts {
-        border: 1px solid;
-        width: 280px;
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        flex-direction: column;
-        align-items: center;
-        height: 200px;
-        .form {
-            height: 80px;
-            //display: flex;
-            justify-content: flex-end;
-            align-items: center;        }
-        .button {
-            background: -webkit-gradient(linear, 0 0, 0 100%, from(#00BBD6), to(#EBFFFF));
-            padding: 10px 20px;
-            text-align: center;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: nowrap;
-            width: 160px;
-            height: 50px;
-            overflow: hidden;
-            border: 3px solid $primaryColor;
-            border-radius: 5px;
-            margin-bottom: 20px;
-            transition: .5s;
-            font-family: $textFontFamily;
-            font-size: 20px;
-            font-weight: 400;
-            color: #fff;
-            text-decoration: none;
+.contactsContainer {
 
-        }
+    flex-direction: column;
+    justify-content: flex-start;
+}
 
-    }
+ul {
+    padding: 0;
+}
+li {
+    margin-bottom: 30px;
 }
 
 
+.title{
+    margin: 100px 0 30px;
+    font-family: "Josefin Sans", sans-serif;
+    font-weight: 400;
+    color: #fff;
+    text-transform: capitalize;
+    font-size: 36px;
+    line-height: 1.2;
+    letter-spacing: 5px;
+}
+
+.formContainer {
+    width: 50%;
+    height: 150px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.submitBtn{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    background-color: transparent;
+    border: 2px solid #4e93e6;
+    border-radius: 5px;
+    margin: 15px auto;
+    transition: 0.5s;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    color: #fff;
+    width: 140px;
+    height: 40px;
+    font-size: 16px;
+}
+
+.formContainer input, .formContainer textarea {
+    width: 100%;
+}
+
+textarea {
+    padding: 10px;
+    height: 120px;
+    width: 100%;
+    resize: none;
+    border: 1px solid #4e93e6;
+    background-color: #252527;
+    color: white;
+}
+
+input {
+    padding: 10px;
+    width: 100%;
+    border: 1px solid #4e93e6;
+    background-color: #252527;
+    color: white;
+}
 
 
 
