--- a/src/footer/Footer.module.scss
+++ b/src/footer/Footer.module.scss
@@ -2,7 +2,7 @@
 @import "../my-app/src/common/styles/sass/mixins";
 
 .footerBlock {
-  height: 40vh;
+  height: 20vh;
   background-color: $bgSecondColor;
 
   .footerContainer {
@@ -18,11 +18,10 @@
     .footer {
       width: 300px;
       height: 40px;
-      border: 1px solid;
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
-      @include text($textFontFamily,14px,1.2);
+
     }
 
     .button {
@@ -40,12 +39,19 @@
     .link {
       background-color: $bgSecondColor;
       color: $textColor;
+      @include text($textFontFamily,14px,1.2);
+      @media only screen and (min-width: 850px) and (min-height: 600px) {
+        &:hover {
+          color: $primaryColor;
+        }
+      }
     }
  .copyright{
   color: rgba(255, 255, 255, .5);
 }
 
   }
+
 }
 
 
