--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -4,34 +4,64 @@
 .mainBlock {
   height: 100vh;
   background-color: $bgColor;
-
-
   .text {
-    width: 350px;
     background-color: $bgColor;
     color: $textColor;
-    @include text($titleFontFamily,17px,1.2);
-   .h1 {
-     position: relative;
-     margin-bottom: 20px;
-
-   }
-    .span {
+    @include text($titleFontFamily,25px,1.2);
+    .mainTextBlock {
       position: relative;
-      display: inline-block;
-      color:$primaryColor;
+      margin-bottom: 20px;
+      &::before {
+        position: absolute;
+        content: '';
+        bottom: -10px;
+        left: 50%;
+        width: 100%;
+        height: 2px;
+        background-color: $primaryColor;
+        transform: translate(-50%, 50%);
+      }
+      .h1 {
+        position: relative;
+        margin-bottom: 20px;
 
+      }
+
+      .span {
+        position: relative;
+        display: inline-block;
+        color: $primaryColor;
+
+      }
     }
-
   }
-
+  .mainPositionText {
+    @include text( 35px, 700, $textColor);
+    @media only screen and (min-width: 1150px) and (max-width: 1700px) {
+      font-size: 30px;
+    }
+    @media only screen and (min-width: 900px) and (max-width: 1150px) {
+      font-size: 25px;
+    }
+    @media only screen and (min-width: 700px) and (max-width: 900px) {
+      font-size: 22px;
+    }
+    @media only screen and (min-width: 400px) and (max-width: 700px) {
+      font-size: 20px;
+    }
+    @media only screen and (max-width: 400px) {
+      font-size: 17px;
+    }
+    @media screen and (orientation: landscape) and (min-height: 200px) and (max-height: 450px) {
+      font-size: 18px;
+    }
+  }
   .photo {
     width: 350px;
     height: 400px;
     background-color: $bgColor;
     background-size: cover;
-    //border:  1px solid $primaryColor;
-    border-radius: 25px;
+    border-radius: 7px;
   }
 }
 
