--- a/src/nav/Nav.module.scss
+++ b/src/nav/Nav.module.scss
@@ -3,23 +3,28 @@
 
 
 .nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: nowrap;
-    width: 45%;
-    height: 50%;
-    .link {
-        font-family: "Poppins",sans-serif;
-        font-size: 20px;
-        font-weight: 700;
-        color: #4e93e6;
-        transition: .3s;
-        text-decoration: none;
-        cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: nowrap;
+  width: 45%;
+  height: 50%;
+
+  .link {
+    font-family: "Poppins", sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+    color: #4e93e6;
+    transition: .3s;
+    text-decoration: none;
+    cursor: pointer;
+
+    @media only screen and (min-width: 850px) and (min-height: 600px) {
+      &:hover {
+        color: $textColor;
+      }
     }
 
-
-
+  }
 }
