--- a/src/projects/project/Project.module.scss
+++ b/src/projects/project/Project.module.scss
@@ -8,6 +8,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    border-radius: 7px;
     .imageContainer {
         height: 300px;
         width: 100%;
@@ -18,6 +19,7 @@
         background-size: cover;
         background-position: center;
         position: relative;
+        border-radius: 7px;
         &::before {
             position: absolute;
             content: '';
