--- a/src/skills/Skills.module.scss
+++ b/src/skills/Skills.module.scss
@@ -2,20 +2,25 @@
 @import "../my-app/src/common/styles/sass/mixins";
 
 .skillsBlock {
-    background-color: $bgSecondColor;
+    background-color: $bgColor;
+    height: 100%;
     .skillsContainer {
         flex-direction: column;
         justify-content: flex-start;
+        width: 80%;
         .skills {
-            border: 1px solid;
+            //border: 1px solid;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-gap: 30px;
             width: 100%;
-            display: flex;
             justify-content: space-between;
             flex-wrap: wrap;
             color: $textColor;
             @include text($titleFontFamily,16px,1.2);
             .title {
                 background-color: darkgray ;
+                margin: 0 0 8px;
 
             }
 
