--- a/src/skills/skill/Skill.module.scss
+++ b/src/skills/skill/Skill.module.scss
@@ -3,18 +3,27 @@
 
 .skill {
     width: 240px;
-    background-color: $bgColor;
+    background-color: $bgSecondColor;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    .icon {
-        height: 60px;
-        width: 60px;
-        background-color: #fdf6f6;
-
+    border-radius: 5px;
+    justify-content: stretch;
+    flex-wrap: nowrap;
+    @media only screen and (max-width: 1100px) {
+        width: 100%;
     }
-    .description{
+    .icon {
+        background-color: #fdf6f6;
+        width: 110px;
+        height: 110px;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        margin-top: 20px;
+    }
+              .description{
 
     }
 }
